--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-html, body {
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@700&display=swap");
+html,
+body {
   margin: 0;
   padding: 0;
 }
@@ -8,9 +10,65 @@ html, body {
   width: 100vw;
 }
 
-.app {
+.nav-bar {
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 101px;
+}
+
+.category-links {
+  display: flex;
+  padding: 0;
+  margin: 0;
   height: 100%;
-  width: 100%;
+  align-items: center;
+}
+.category-links li {
+  padding: 0 16px;
+  list-style: none;
+  text-transform: uppercase;
+  font-family: "Raleway", serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 120%;
+  color: #1d1f22;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.category-links li:hover {
+  color: #5ece7b;
+  cursor: pointer;
+  border-bottom: solid 2px #5ece7b;
+}
+.category-links li.active {
+  color: #5ece7b;
+  border-bottom: solid 2px #5ece7b;
+}
+
+.mini-cart-menu,
+.currency-switcher {
+  border: 2px solid #5ece7b;
+  position: absolute;
+  top: 100px;
+  right: 0px;
+  transition: 1s;
+  animation: mymove 1s;
+  height: 300px;
+  width: 200px;
+  overflow: hidden;
+}
+
+@keyframes mymove {
+  from {
+    height: 0;
+  }
+  to {
+    height: 300px;
+  }
 }
 
 /*# sourceMappingURL=App.css.map */
