--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+  font-family: "Raleway", sans-serif;
 }
 
 #root {
@@ -17,6 +18,9 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 0 101px;
+  position: sticky;
+  top: 0;
+  background: white;
 }
 
 .category-links {
@@ -41,36 +45,140 @@ body {
     align-items: center;
   }
 
-  li:hover {
+  li:hover, li.active {
     color: #5ece7b;
     cursor: pointer;
     border-bottom: solid 2px #5ece7b;
   }
-
-  li.active {
-    color: #5ece7b;
-    border-bottom: solid 2px #5ece7b;
-  }
 }
 
-.mini-cart-menu,
-.currency-switcher {
-  border: 2px solid #5ece7b;
-  position: absolute;
-  top: 100px;
-  right: 0px;
+.menu {
   transition: 1s;
-  animation: mymove 1s;
-  height: 300px;
-  width: 200px;
-  overflow: hidden;
+  animation: menuanimation 0.5s;
+  background-color: white;
+  box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
 }
 
-@keyframes mymove {
-  from {
-    height: 0;
+.mini-cart-menu {
+  position: absolute;
+  top: 51px;
+  right: -10px;
+  width: 325px;
+  padding: 32px 16px;
+}
+
+.currency-switcher-menu {
+  position: absolute;
+  top: 51px;
+  right: 15px;
+  width: 114px;
+
+  ul {
+    list-style: none;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+
+    li {
+      height: 45px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      font-weight: 500;
+    }
   }
-  to {
-    height: 300px;
+
+  li:hover,
+  li.active {
+    background-color: #eee;
+  }
+}
+
+.nav-links {
+  display: flex;
+  align-items: center;
+  width: 87px;
+  position: relative;
+}
+
+.currency-controls {
+  margin-right: 22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 18px;
+
+  img {
+    margin-left: 10px;
+    transition: 0.25s;
+  }
+
+  img.active {
+    transform: rotateX(180deg);
+    animation: arrowrotation 0.25s ease-in-out;
+  }
+}
+
+.minicart-controls.active {
+  animation: bounce 1s ease-in-out;
+}
+
+.minicart-controls {
+  cursor: pointer;
+}
+
+.minicart {
+  position: relative;
+}
+
+.logo:hover {
+  animation: bounce 1s ease-in-out;
+  animation-iteration-count: infinite;
+}
+
+@keyframes menuanimation {
+  0% {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+  100% {
+    opacity: 100%;
+    transform: translateY(0);
+  }
+}
+
+@keyframes arrowrotation {
+  0% {
+    transform: rotateX(0deg);
+  }
+  100% {
+    transform: rotateX(180deg);
+  }
+}
+
+@keyframes bounce {
+  0% {
+    transform: scale(1, 1) translateY(0);
+  }
+  10% {
+    transform: scale(1.1, .9) translateY(0);
+  }
+  30% {
+    transform: scale(.9, 1.1) translateY(-5px);
+  }
+  50% {
+    transform: scale(1, 1) translateY(0);
+  }
+  57% {
+    transform: scale(1, 1) translateY(-1.5px);
+  }
+  64% {
+    transform: scale(1, 1) translateY(0);
+  }
+  100% {
+    transform: scale(1, 1) translateY(0);
   }
 }
