--- a/src/App.css
+++ b/src/App.css
@@ -230,6 +230,21 @@ body {
   color: #8D8F9A;
 }
 
+#overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(57, 55, 72, 0.22);
+  z-index: 2;
+  pointer-events: none;
+  animation: overlay-screen 0.25s ease-in-out;
+}
+
 @keyframes menuanimation {
   0% {
     opacity: 0;
@@ -277,6 +292,18 @@ body {
   }
   50% {
     transform: scale(1.05);
+  }
+}
+@keyframes overlay-screen {
+  from {
+    border-radius: 0 50% 50% 50%;
+    height: 0;
+    width: 0;
+  }
+  to {
+    border-radius: 0;
+    height: 100%;
+    width: 100%;
   }
 }
 
