--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,22 @@ body {
 #root {
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
+}
+
+.button {
+  box-sizing: border-box;
+  width: 140px;
+  height: 43px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 16.8px;
+  text-transform: uppercase;
+  color: #1D1F22;
+  cursor: pointer;
 }
 
 .nav-bar {
@@ -64,6 +80,9 @@ body {
   right: -10px;
   width: 325px;
   padding: 32px 16px;
+  box-sizing: border-box;
+  max-height: 677px;
+  overflow-y: auto;
 }
 
 .currency-switcher-menu {
@@ -172,7 +191,8 @@ body {
   border: 1px solid rgba(168, 172, 176, 0.19);
 }
 .item-in-category .item-image img {
-  height: 100%;
+  max-height: 100%;
+  max-width: 100%;
 }
 .item-in-category .item-name {
   font-weight: 300;
@@ -228,6 +248,115 @@ body {
   font-size: 24px;
   line-height: 160%;
   color: #8D8F9A;
+}
+
+.mini-cart-info {
+  margin-bottom: 32px;
+}
+
+#view-bag.button {
+  background: #FFFFFF;
+  border: 1px solid #1D1F22;
+}
+
+#check-out.button {
+  background: #5ECE7B;
+  color: white;
+}
+
+.mini-cart-buttons {
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+}
+
+#mini-cart-heading {
+  line-height: 160%;
+  color: #1D1F22;
+  margin-bottom: 32px;
+}
+#mini-cart-heading span {
+  font-weight: 700;
+}
+
+#mini-cart-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #1D1F22;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  line-height: 18px;
+}
+#mini-cart-footer #m-price {
+  font-weight: 700;
+  line-height: 160%;
+  font-family: "Raleway", sans-serif;
+}
+
+.mini-cart-item {
+  display: flex;
+  column-gap: 8px;
+  margin-bottom: 42px;
+}
+
+.minicart-item-image {
+  width: 121px;
+  height: 190px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.minicart-item-image img {
+  max-height: 100%;
+  max-width: 100%;
+}
+
+.minicart-item-info {
+  display: flex;
+  flex-direction: column;
+  width: 132px;
+  font-weight: 300;
+  line-height: 160%;
+  color: #1D1F22;
+}
+
+.minicart-item-controls {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 500;
+  line-height: 160%;
+  color: #1D1F22;
+}
+.minicart-item-controls img {
+  cursor: pointer;
+}
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background: #F1F1F1;
+  border-radius: 100vw;
+  margin: 10px 0;
+}
+
+::-webkit-scrollbar-thumb {
+  backdrop-filter: blur(10px);
+  background: rgb(94, 206, 123);
+  background: radial-gradient(circle, rgba(94, 206, 123, 0.6) 0%, rgba(94, 206, 123, 0.5) 100%);
+  border-radius: 100vw;
+  border: 1px solid #F1F1F1;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(94, 206, 123, 0.8);
+  backdrop-filter: blur(10px);
+  border-radius: 100vw;
+  border: 1px solid #F1F1F1;
 }
 
 #overlay {
