--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
 html,
 body {
@@ -149,6 +150,23 @@ body {
 
 .minicart-controls {
   cursor: pointer;
+  position: relative;
+
+  .cart-label{
+    position: absolute;
+    z-index: -1;
+    top: -7px;
+    right: -14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1d1f22;
+    color: white;
+    font-family: 'roboto', 'sans-serif';
+    font-weight: 700;
+    border-radius: 60px;
+    width: 20px;
+  }
 }
 
 .minicart {
@@ -266,7 +284,7 @@ body {
   color: #8D8F9A;
 }
 
-.mini-cart-info{
+.mini-cart-info {
   margin-bottom: 32px;
 }
 
@@ -296,7 +314,7 @@ body {
   }
 }
 
-#mini-cart-footer{
+#mini-cart-footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -305,42 +323,60 @@ body {
   font-weight: 500;
   line-height: 18px;
 
-  #m-price{
+  #m-price {
     font-weight: 700;
     line-height: 160%;
     font-family: "Raleway", sans-serif;
   }
 }
 
-.mini-cart-item{
+.mini-cart-item {
   display: flex;
   column-gap: 8px;
   margin-bottom: 42px;
+  //align-items: center;
+  height: fit-content;
 }
 
 .minicart-item-image {
-  width: 121px;
-  height: 190px;
+  max-width: 121px;
   display: flex;
   align-items: center;
   justify-content: center;
 
-  img{
-    max-height: 100%;
+  img {
     max-width: 100%;
   }
 }
 
-.minicart-item-info{
+.minicart-item-info {
   display: flex;
   flex-direction: column;
   width: 132px;
   font-weight: 300;
   line-height: 160%;
   color: #1D1F22;
+
+  .m-item-price {
+    font-weight: 500;
+    line-height: 160%;
+    margin-bottom: 8px;
+  }
+
+  .m-item-name {
+    margin-bottom: 4px;
+  }
+  .attribute{
+    margin-bottom: 8px;
+  }
 }
 
-.minicart-item-controls{
+.minicart-item-info .attribute:last-child{
+  margin-bottom: 0;
+}
+
+
+.minicart-item-controls {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -349,28 +385,79 @@ body {
   line-height: 160%;
   color: #1D1F22;
 
-  img{
+  img {
     cursor: pointer;
   }
 }
 
-::-webkit-scrollbar{
+
+#m-attribute-values {
+  display: flex;
+  column-gap: 8px;
+
+  .text-attribute {
+    box-sizing: border-box;
+    height: 24px;
+    min-width: 24px;
+    width: fit-content;
+    border: 1px solid #1D1F22;
+    padding: 0 2px;
+    text-align: center;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 160%;
+  }
+
+  .text-attribute.selected {
+    background: #1D1F22;
+    color: #FFFFFF;
+  }
+
+  .swatch-attribute {
+    width: 16px;
+    height: 16px;
+    position: relative;
+  }
+
+  .swatch-attribute.selected:after {
+    content: "";
+    width: 18px;
+    height: 19px;
+    top: -3px;
+    left: -2px;
+    position: absolute;
+    border: 1px solid #5ece7b;
+
+  }
+}
+
+#m-attribute-name {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  margin-bottom: 8px;
+}
+
+::-webkit-scrollbar {
   width: 15px;
 }
-::-webkit-scrollbar-track{
+
+::-webkit-scrollbar-track {
   background: #F1F1F1;
   border-radius: 100vw;
   margin: 10px 0;
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   backdrop-filter: blur(10px);
-  background: rgb(94,206,123);
-  background: radial-gradient(circle, rgba(94,206,123,0.6) 0%, rgba(94,206,123,0.5) 100%);
+  background: rgb(94, 206, 123);
+  background: radial-gradient(circle, rgba(94, 206, 123, 0.6) 0%, rgba(94, 206, 123, 0.5) 100%);
   border-radius: 100vw;
   border: 1px solid #F1F1F1;
 }
-::-webkit-scrollbar-thumb:hover{
+
+::-webkit-scrollbar-thumb:hover {
   background: rgba(94, 206, 123, 0.8);
   backdrop-filter: blur(10px);
   border-radius: 100vw;
