--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Source+Sans+Pro&display=swap');
 
 html,
 body {
@@ -152,7 +152,7 @@ body {
   cursor: pointer;
   position: relative;
 
-  .cart-label{
+  .cart-label {
     position: absolute;
     z-index: -1;
     top: -7px;
@@ -242,6 +242,7 @@ body {
     display: none;
     transition: 0.2s ease-in-out;
     border-radius: 50%;
+    z-index: 2;
   }
 
   .add-to-cart-icon:hover {
@@ -366,12 +367,13 @@ body {
   .m-item-name {
     margin-bottom: 4px;
   }
-  .attribute{
+
+  .attribute {
     margin-bottom: 8px;
   }
 }
 
-.minicart-item-info .attribute:last-child{
+.minicart-item-info .attribute:last-child {
   margin-bottom: 0;
 }
 
@@ -428,7 +430,6 @@ body {
     left: -2px;
     position: absolute;
     border: 1px solid #5ece7b;
-
   }
 }
 
@@ -439,17 +440,159 @@ body {
   margin-bottom: 8px;
 }
 
-::-webkit-scrollbar {
-  width: 15px;
+.product.body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 102px;
+  margin: 80px 219px 0 100px;
 }
 
-::-webkit-scrollbar-track {
+.product-images {
+  height: 511px;
+  width: 729px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .main-image {
+    height: 511px;
+    width: 610px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      max-width: 100%;
+      max-height: 100%;
+      animation: fade-in 0.2s ease;
+    }
+  }
+
+  .mini-images {
+    display: flex;
+    flex-direction: column;
+    row-gap: 40px;
+    overflow-y: auto;
+    max-height: 100%;
+
+    .mini-image-container {
+      width: 70px;
+      height: 80px;
+
+      img {
+        width: 100%;
+      }
+    }
+  }
+}
+
+.product-info {
+  width: 292px;
+
+  .p-item-name {
+    margin-bottom: 43px;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 27px;
+    color: #1D1F22;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 16px;
+
+    span:first-child {
+      font-weight: 600;
+    }
+  }
+
+  .p-item-price{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 10px;
+    font-weight: 700;
+    color: #1d1f22;
+    line-height: 18px;
+    font-size: 24px;
+    padding-top: 12px;
+    margin-bottom: 20px;
+
+    span{
+      font-family: 'Roboto Condensed';
+      font-style: normal;
+      font-size: 18px;
+    }
+  }
+
+  .swatch-attribute{
+    height: 32px !important;
+    width: 32px !important;
+  }
+
+  .swatch-attribute.selected:after{
+    content: "";
+    width: 35px !important;
+    height: 35px !important;
+    top: -3px;
+    left: -3px !important;
+    position: absolute;
+    border: 1px solid #5ece7b;
+  }
+
+  .text-attribute{
+    height: 45px !important;
+    width: 63px !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px !important;
+  }
+
+  .attribute{
+    margin-bottom: 24px;
+    #m-attribute-name{
+      font-family: 'Roboto Condensed', "sans-serif";
+      font-style: normal;
+      font-size: 18px;
+      font-weight: 700;
+      color: #1d1f22;
+      line-height: 18px;
+    }
+  }
+
+  .add-to-cart-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    //padding: 16px 32px;
+    width: 292px;
+    height: 52px;
+    background: #5ECE7B;
+    color: #FFFFFF;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 120%;
+    text-transform: uppercase;
+    cursor: pointer;
+  }
+}
+
+.mini-images::-webkit-scrollbar {
+  width: 0;
+}
+
+.mini-cart-menu::-webkit-scrollbar {
+  width: 10px;
+}
+
+.mini-cart-menu::-webkit-scrollbar-track {
   background: #F1F1F1;
   border-radius: 100vw;
   margin: 10px 0;
 }
 
-::-webkit-scrollbar-thumb {
+.mini-cart-menu::-webkit-scrollbar-thumb {
   backdrop-filter: blur(10px);
   background: rgb(94, 206, 123);
   background: radial-gradient(circle, rgba(94, 206, 123, 0.6) 0%, rgba(94, 206, 123, 0.5) 100%);
@@ -457,7 +600,7 @@ body {
   border: 1px solid #F1F1F1;
 }
 
-::-webkit-scrollbar-thumb:hover {
+.mini-cart-menu::-webkit-scrollbar-thumb:hover {
   background: rgba(94, 206, 123, 0.8);
   backdrop-filter: blur(10px);
   border-radius: 100vw;
@@ -477,6 +620,14 @@ body {
   z-index: 2;
   pointer-events: none;
   animation: overlay-screen 0.25s ease-in-out;
+}
+
+#category-item-overlay {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 @keyframes menuanimation {
