--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,12 @@ body {
   cursor: pointer;
 }
 
+.line {
+  width: 100%;
+  height: 1px;
+  background: #E5E5E5;
+}
+
 .nav-bar {
   height: 80px;
   display: flex;
@@ -394,9 +400,10 @@ body {
 }
 #m-attribute-values .swatch-attribute.selected:after {
   content: "";
-  width: 18px;
-  height: 19px;
-  top: -3px;
+  box-sizing: border-box;
+  width: 20px;
+  height: 20px;
+  top: -2px;
   left: -2px;
   position: absolute;
   border: 1px solid #5ece7b;
@@ -481,20 +488,22 @@ body {
   margin-bottom: 20px;
 }
 .product-info .p-item-price span {
-  font-family: "Roboto Condensed";
+  font-family: "Roboto Condensed", sans-serif;
   font-style: normal;
   font-size: 18px;
 }
 .product-info .swatch-attribute {
   height: 32px !important;
   width: 32px !important;
+  position: relative;
 }
 .product-info .swatch-attribute.selected:after {
   content: "";
-  width: 35px !important;
-  height: 35px !important;
-  top: -3px;
-  left: -3px !important;
+  box-sizing: border-box;
+  width: 36px !important;
+  height: 36px !important;
+  top: -2px !important;
+  left: -2px !important;
   position: absolute;
   border: 1px solid #5ece7b;
 }
@@ -530,6 +539,161 @@ body {
   line-height: 120%;
   text-transform: uppercase;
   cursor: pointer;
+}
+
+.cart {
+  padding: 80px 100px 0;
+  display: flex;
+  flex-direction: column;
+}
+.cart h1 {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 40px;
+  color: #1d1f22;
+  margin-bottom: 55px;
+}
+.cart .button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 32px;
+  width: 279px;
+  height: 43px;
+  background: #5ECE7B;
+  margin-bottom: 100px;
+  color: white;
+}
+
+.cart-item {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 24px;
+}
+
+.cart-item-image {
+  width: 200px;
+  max-height: 288px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.cart-item-image img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.cart-item-info .c-item-name {
+  font-size: 30px;
+  line-height: 27px;
+  font-weight: 400;
+  color: #1D1F22;
+  margin-bottom: 20px;
+}
+.cart-item-info .c-item-name span:first-child {
+  font-weight: 700;
+  margin-bottom: 16px;
+  display: inline-block;
+}
+.cart-item-info .c-item-price {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 24px;
+  color: #1d1f22;
+  margin-bottom: 20px;
+}
+.cart-item-info .swatch-attribute {
+  height: 32px !important;
+  width: 32px !important;
+  position: relative;
+}
+.cart-item-info .swatch-attribute.selected:after {
+  content: "";
+  box-sizing: border-box;
+  width: 36px !important;
+  height: 36px !important;
+  top: -2px !important;
+  left: -2px !important;
+  position: absolute;
+  border: 1px solid #5ece7b;
+}
+.cart-item-info .text-attribute {
+  height: 45px !important;
+  width: 63px !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px !important;
+}
+.cart-item-info .attribute {
+  margin-bottom: 24px;
+}
+.cart-item-info .attribute #m-attribute-name {
+  font-family: "Roboto Condensed", "sans-serif";
+  font-style: normal;
+  font-size: 18px;
+  font-weight: 700;
+  color: #1d1f22;
+  line-height: 18px;
+}
+
+.left {
+  display: flex;
+  height: 100%;
+}
+.left .cart-item-controls {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 160%;
+  color: #1d1f22;
+  margin-right: 24px;
+}
+.left .cart-item-controls img {
+  height: 45px;
+  width: 45px;
+  cursor: pointer;
+}
+
+.image-controls {
+  display: flex;
+  position: absolute;
+  column-gap: 8px;
+  bottom: 16px;
+  right: 16px;
+}
+.image-controls img {
+  height: 24px;
+  width: 24px;
+}
+
+.cart-info {
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 400;
+  margin-block: 32px 18px;
+  width: 50%;
+}
+.cart-info tr:last-child {
+  font-weight: 500;
+}
+.cart-info tr {
+  margin-bottom: 8px;
+  display: block;
+}
+.cart-info td {
+  min-width: 100px;
+}
+.cart-info .value {
+  font-weight: 700;
+  padding-left: 10px;
 }
 
 .mini-images::-webkit-scrollbar {
