--- a/src/App.scss
+++ b/src/App.scss
@@ -30,6 +30,12 @@ body {
   cursor: pointer;
 }
 
+.line {
+  width: 100%;
+  height: 1px;
+  background: #E5E5E5;
+}
+
 .nav-bar {
   height: 80px;
   display: flex;
@@ -424,9 +430,10 @@ body {
 
   .swatch-attribute.selected:after {
     content: "";
-    width: 18px;
-    height: 19px;
-    top: -3px;
+    box-sizing: border-box;
+    width: 20px;
+    height: 20px;
+    top: -2px;
     left: -2px;
     position: absolute;
     border: 1px solid #5ece7b;
@@ -506,7 +513,7 @@ body {
     }
   }
 
-  .p-item-price{
+  .p-item-price {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -518,29 +525,31 @@ body {
     padding-top: 12px;
     margin-bottom: 20px;
 
-    span{
-      font-family: 'Roboto Condensed';
+    span {
+      font-family: 'Roboto Condensed', sans-serif;
       font-style: normal;
       font-size: 18px;
     }
   }
 
-  .swatch-attribute{
+  .swatch-attribute {
     height: 32px !important;
     width: 32px !important;
+    position: relative;
   }
 
-  .swatch-attribute.selected:after{
+  .swatch-attribute.selected:after {
     content: "";
-    width: 35px !important;
-    height: 35px !important;
-    top: -3px;
-    left: -3px !important;
+    box-sizing: border-box;
+    width: 36px !important;
+    height: 36px !important;
+    top: -2px !important;
+    left: -2px !important;
     position: absolute;
     border: 1px solid #5ece7b;
   }
 
-  .text-attribute{
+  .text-attribute {
     height: 45px !important;
     width: 63px !important;
     display: flex;
@@ -549,9 +558,10 @@ body {
     font-size: 16px !important;
   }
 
-  .attribute{
+  .attribute {
     margin-bottom: 24px;
-    #m-attribute-name{
+
+    #m-attribute-name {
       font-family: 'Roboto Condensed', "sans-serif";
       font-style: normal;
       font-size: 18px;
@@ -561,7 +571,7 @@ body {
     }
   }
 
-  .add-to-cart-button{
+  .add-to-cart-button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -575,6 +585,183 @@ body {
     line-height: 120%;
     text-transform: uppercase;
     cursor: pointer;
+  }
+}
+
+.cart {
+  padding: 80px 100px 0;
+  display: flex;
+  flex-direction: column;
+
+  h1 {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 40px;
+    color: #1d1f22;
+    margin-bottom: 55px;
+  }
+
+  .button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 16px 32px;
+    width: 279px;
+    height: 43px;
+    background: #5ECE7B;
+    margin-bottom: 100px;
+    color: white;
+  }
+}
+
+.cart-item {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 24px;
+}
+
+.cart-item-image {
+  width: 200px;
+  max-height: 288px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
+
+.cart-item-info {
+
+  .c-item-name {
+    font-size: 30px;
+    line-height: 27px;
+    font-weight: 400;
+    color: #1D1F22;
+    margin-bottom: 20px;
+
+    span:first-child {
+      font-weight: 700;
+      margin-bottom: 16px;
+      display: inline-block;
+    }
+  }
+
+  .c-item-price {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 24px;
+    color: #1d1f22;
+    margin-bottom: 20px;
+  }
+
+  .swatch-attribute {
+    height: 32px !important;
+    width: 32px !important;
+    position: relative;
+  }
+
+  .swatch-attribute.selected:after {
+    content: "";
+    box-sizing: border-box;
+    width: 36px !important;
+    height: 36px !important;
+    top: -2px !important;
+    left: -2px !important;
+    position: absolute;
+    border: 1px solid #5ece7b;
+  }
+
+  .text-attribute {
+    height: 45px !important;
+    width: 63px !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px !important;
+  }
+
+  .attribute {
+    margin-bottom: 24px;
+
+    #m-attribute-name {
+      font-family: 'Roboto Condensed', "sans-serif";
+      font-style: normal;
+      font-size: 18px;
+      font-weight: 700;
+      color: #1d1f22;
+      line-height: 18px;
+    }
+  }
+}
+
+.left {
+  display: flex;
+  height: 100%;
+
+
+  .cart-item-controls {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 160%;
+    color: #1d1f22;
+    margin-right: 24px;
+
+    img {
+      height: 45px;
+      width: 45px;
+      cursor: pointer;
+    }
+  }
+}
+
+.image-controls {
+  display: flex;
+  position: absolute;
+  column-gap: 8px;
+  bottom: 16px;
+  right: 16px;
+
+  img {
+    height: 24px;
+    width: 24px;
+  }
+}
+
+.cart-info {
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 400;
+  margin-block: 32px 18px;
+  width: 50%;
+
+
+  tr:last-child {
+    font-weight: 500;
+  }
+
+  tr {
+    margin-bottom: 8px;
+    display: block;
+  }
+
+  td {
+    min-width: 100px;
+  }
+
+  .value {
+    font-weight: 700;
+    padding-left: 10px;
   }
 }
 
