Cleaning, Refactoring, and polishing

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
   padding: 0;
   font-family: "Raleway", sans-serif;
   transition: 0.25s ease-in-out;
+  color: #1d1f22;
 }
 
 #root {
@@ -16,6 +17,7 @@ body {
 
 .button {
   box-sizing: border-box;
+  position: relative;
   width: 140px;
   height: 43px;
   display: flex;
@@ -25,8 +27,37 @@ body {
   font-weight: 600;
   line-height: 16.8px;
   text-transform: uppercase;
-  color: #1D1F22;
   cursor: pointer;
+  overflow: hidden;
+  transition: 1s all ease;
+  z-index: 2;
+}
+
+.button:before, .text-attribute:before {
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 0;
+  height: 0;
+  background: rgba(94, 206, 123, 0.1);
+  z-index: -1;
+  transition: 0.4s all ease;
+  border-radius: 50px;
+}
+
+.button.green:before {
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.text-attribute:before {
+  background: rgba(0, 0, 0, 0.15);
+}
+
+.button:hover::before {
+  width: 150%;
+  height: 150%;
 }
 
 .line {
@@ -63,7 +94,6 @@ body {
   font-weight: 600;
   font-size: 16px;
   line-height: 120%;
-  color: #1d1f22;
   height: 100%;
   display: flex;
   align-items: center;
@@ -181,7 +211,6 @@ body {
 .category-page h1 {
   font-weight: 400;
   font-size: 42px;
-  color: #1D1F22;
   text-transform: capitalize;
   margin-bottom: 103px;
   line-height: 160%;
@@ -201,7 +230,6 @@ body {
   background: #FFFFFF;
   padding: 16px;
   line-height: 160%;
-  color: #1D1F22;
   position: relative;
   transition: 0.3s ease-in-out;
 }
@@ -296,7 +324,6 @@ body {
 
 #mini-cart-heading {
   line-height: 160%;
-  color: #1D1F22;
   margin-bottom: 32px;
 }
 #mini-cart-heading span {
@@ -307,7 +334,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: #1D1F22;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   line-height: 18px;
@@ -341,7 +367,6 @@ body {
   width: 132px;
   font-weight: 300;
   line-height: 160%;
-  color: #1D1F22;
 }
 .minicart-item-info .m-item-price {
   font-weight: 500;
@@ -366,7 +391,6 @@ body {
   justify-content: space-between;
   font-weight: 500;
   line-height: 160%;
-  color: #1D1F22;
 }
 .minicart-item-controls img {
   cursor: pointer;
@@ -388,6 +412,7 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 160%;
+  cursor: default;
 }
 #m-attribute-values .text-attribute.selected {
   background: #1D1F22;
@@ -466,7 +491,6 @@ body {
   font-weight: 400;
   font-size: 30px;
   line-height: 27px;
-  color: #1D1F22;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -481,7 +505,6 @@ body {
   justify-content: center;
   row-gap: 10px;
   font-weight: 700;
-  color: #1d1f22;
   line-height: 18px;
   font-size: 24px;
   padding-top: 12px;
@@ -514,6 +537,13 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 16px !important;
+  cursor: pointer !important;
+  overflow: hidden;
+  position: relative;
+}
+.product-info .text-attribute:hover::before {
+  width: 150%;
+  height: 150%;
 }
 .product-info .attribute {
   margin-bottom: 24px;
@@ -523,8 +553,16 @@ body {
   font-style: normal;
   font-size: 18px;
   font-weight: 700;
-  color: #1d1f22;
   line-height: 18px;
+}
+.product-info .product-description {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 160%;
+}
+.product-info .product-description h1 {
+  line-height: 100%;
 }
 .product-info .add-to-cart-button {
   display: flex;
@@ -550,7 +588,6 @@ body {
   font-weight: 700;
   font-size: 32px;
   line-height: 40px;
-  color: #1d1f22;
   margin-bottom: 55px;
 }
 .cart .button {
@@ -591,7 +628,6 @@ body {
   font-size: 30px;
   line-height: 27px;
   font-weight: 400;
-  color: #1D1F22;
   margin-bottom: 20px;
 }
 .cart-item-info .c-item-name span:first-child {
@@ -603,7 +639,6 @@ body {
   font-weight: 700;
   font-size: 24px;
   line-height: 24px;
-  color: #1d1f22;
   margin-bottom: 20px;
 }
 .cart-item-info .swatch-attribute {
@@ -637,7 +672,6 @@ body {
   font-style: normal;
   font-size: 18px;
   font-weight: 700;
-  color: #1d1f22;
   line-height: 18px;
 }
 
@@ -653,7 +687,6 @@ body {
   font-weight: 500;
   font-size: 24px;
   line-height: 160%;
-  color: #1d1f22;
   margin-right: 24px;
 }
 .left .cart-item-controls img {
@@ -808,6 +841,38 @@ body {
     height: 100%;
     width: 100%;
   }
+}
+@keyframes alert {
+  0% {
+    opacity: 0;
+    transform: translateY(-30px);
+    height: 0;
+  }
+  100% {
+    opacity: 100%;
+    transform: translateY(0);
+    height: 45px;
+  }
+}
+.alert {
+  position: absolute;
+  width: 225px;
+  height: 45px;
+  padding-inline: 1em;
+  top: 100px;
+  left: 47%;
+  z-index: 9999;
+  font-family: "Roboto", sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  color: #106b29;
+  background: rgba(94, 206, 123, 0.2);
+  backdrop-filter: blur(0.5em);
+  border: 1px solid #5ECE7B;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: alert 0.5s ease-in-out;
 }
 
 /*# sourceMappingURL=App.css.map */
